fixed loading screen bug with visibility in key frames

--- a/to-do-mobile.css
+++ b/to-do-mobile.css
@@ -38,6 +38,7 @@ label {
   }
   100% {
     opacity: 0;
+    visibility: hidden;
   }
 }
 .container,
